[tool.poetry]
name = "ken-datasci"
version = "0.1.0"
description = ""
authors = ["Kentaro Kuwata <kuwaken0925@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
jupyterlab = "^4.2.5"
rasterio = "^1.4.1"
xarray = "^2024.9.0"
geopandas = "^1.0.1"
xgboost = "^2.1.2"
optuna = "^4.0.0"
llvmlite = "^0.43.0"
partd = "^1.4.2"
polars = "^1.11.0"
dask = "^2024.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
